crates/haneul/tests/snapshots/shell_tests__find_env__cached_bad.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/find_env/cached_bad.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# If the active environment name exists but doesn't match on chain ID, fail
haneul move --client.config configs/name_match_id_mismatch.yaml build

----- results -----
success: false
exit_code: 1
----- stdout -----
Error: Environment `manifest_env` has chain ID `0000` in your CLI environment, but `Move.toml` expects `manifest_env` to have chain ID `1234`; this may indicate that `manifest_env` has been wiped or that you have a misconfigured CLI environment. If you want to ignore your CLI's chain ID and build for the `manifest_env` environment, you can pass `-e manifest_env`.

----- stderr -----
