crates/haneul/tests/snapshots/shell_tests__find_env__uncached.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/find_env/uncached.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# If the active environment has no chain ID and we can't get it, we use the environment name
haneul move --client.config configs/name_match_id_none.yaml build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
BUILDING example
