crates/haneul/tests/snapshots/shell_tests__find_env__unique_match.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/find_env/unique_match.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# Active environment matches exactly one manifest address
haneul move --client.config configs/name_mismatch_id_match.yaml build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Note: `Move.toml` does not define an `active_env` environment; building for `manifest_env` instead
BUILDING example
